--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nobita-require",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "koa脚手架require",
   "main": "lib/nobita-require.js",
   "dependencies": {},
@@ -10,7 +10,7 @@
   ],
   "repository": { 
     "type" : "git", 
-    "url" : "https://github.com/iamtang/nobita.git"
+    "url" : "https://github.com/nobitajs/nobita.git"
   },
   "keywords": [
     "koa",
@@ -21,7 +21,7 @@
     "node": ">=8.0.0"
   },
   "bugs": {
-    "url": "https://github.com/iamtang/nobita/issues",
+    "url": "https://github.com/nobitajs/nobita/issues",
     "email": "303907720@qq.com"
   },
   "author": "JJ",
